# nova_genisis_orbitalgaurd

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  debug_high_e  debug_high_e.cpp  debug_high_e_detailed  debug_high_e_detailed.cpp  debug_high_e_final  debug_high_e_fixed  debug_high_e_new  debug_propagation  debug_propagation.cpp  debug_propagation_final  debug_propagation_fixed  et --hard <commit-hash>  generate_tle_data.py  sgp4_cmake_fix.patch  test_propagation  test_propagation_debug  toolchain-emscripten.cmake
.github/workflows/: build.yml
archive/: README.md
build-debug/: nova_genesis_orbitalguard_test
build-release/: test_constants  test_propagation  test_types
build-release/Testing/Temporary/: CTestCostData.txt
data/: debris_3000.tle  sample.tle  sample2.tle  sample3.tle  satellites_1000.tle
docs/: CHARTER.md  CONTRIBUTING.md  PHASES.md  maneuvers.md
examples/js/: README.md  example.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: conjunctions.json  coordinates.json
frontend/src/: App.tsx  index.css  main.tsx  split.css
frontend/src/components/: ControlPanel.tsx  Counters.tsx  DropZone.tsx  ErrorBoundary.tsx  Playback.tsx  PlaybackBar.tsx  PlaybackControls.tsx  ResultsTable.tsx  RiskAnalysis.tsx  RiskResultsPanel.tsx  RiskTable.tsx  SidebarDataPanel.tsx  SimControls.tsx  Viewer3D.tsx
frontend/src/data/: jsonSource.ts
frontend/src/domain/: types.ts  wasmBridge.ts
frontend/src/hooks/: useSimStore.ts
frontend/src/lib/: analyzeScenarioFromStore.ts
frontend/src/mappers/: tleToVis.ts
frontend/src/samples/: sample-debris.tle  sample-satellites.tle
frontend/src/state/: appStore.ts
frontend/src/tests/: smoke.tle-json.spec.ts
frontend/src/types/: tle.ts
include/: api.h  constants.h  maneuver.h  project_includes.h  propagation.h  screening.h  simplified_core.h  time_utils.h  types.h  wasm_api.h
src/: api.cpp  constants.cpp  main.cpp  maneuver.cpp  propagation.cpp  screening.cpp  time_utils.cpp  types.cpp  wasm_api.cpp
tests/: conjunctions.json  coordinates.json  test_api.cpp  test_constants.cpp  test_maneuver.cpp  test_propagation.cpp  test_screening.cpp  test_types.cpp
